Prova Front-End

--- a/ProvaFrontEnd_07_17/ProvaFrontEnd_07_17.csproj
+++ b/ProvaFrontEnd_07_17/ProvaFrontEnd_07_17.csproj
@@ -191,18 +191,44 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\Noticias\CategoriasController.cs" />
+    <Compile Include="Controllers\Noticias\ItensController.cs" />
+    <Compile Include="Controllers\Noticias\LayoutsController.cs" />
+    <Compile Include="Controllers\Noticias\NoticiasController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708031559167_Inicial.cs" />
+    <Compile Include="Migrations\201708031559167_Inicial.Designer.cs">
+      <DependentUpon>201708031559167_Inicial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Noticias\Categoria.cs" />
+    <Compile Include="Models\Noticias\Item.cs" />
+    <Compile Include="Models\Noticias\Layout.cs" />
+    <Compile Include="Models\Noticias\Noticia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Base_Desk_Itens.png" />
+    <Content Include="Base_Desk_Listagem.png" />
+    <Content Include="Base_Desk_Visualização.png" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\img\banner1.jpg" />
+    <Content Include="Content\img\noticia1.jpg" />
+    <Content Include="Content\img\noticia2.jpg" />
+    <Content Include="Content\img\img2.jpg" />
+    <Content Include="Content\img\noticia3.jpg" />
+    <Content Include="Content\img\img3.jpg" />
+    <Content Include="Content\img\img1.jpg" />
+    <Content Include="Content\img\noticia3face.jpg" />
+    <Content Include="Content\img\noticia2face.jpg" />
+    <Content Include="Content\img\noticia1face.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -257,6 +283,28 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Noticias\Create.cshtml" />
+    <Content Include="Views\Noticias\Delete.cshtml" />
+    <Content Include="Views\Noticias\Details.cshtml" />
+    <Content Include="Views\Noticias\Edit.cshtml" />
+    <Content Include="Views\Noticias\Index.cshtml" />
+    <Content Include="Views\Itens\Create.cshtml" />
+    <Content Include="Views\Itens\Delete.cshtml" />
+    <Content Include="Views\Itens\Details.cshtml" />
+    <Content Include="Views\Itens\Edit.cshtml" />
+    <Content Include="Views\Itens\Index.cshtml" />
+    <Content Include="Views\Layouts\Create.cshtml" />
+    <Content Include="Views\Layouts\Delete.cshtml" />
+    <Content Include="Views\Layouts\Details.cshtml" />
+    <Content Include="Views\Layouts\Edit.cshtml" />
+    <Content Include="Views\Layouts\Index.cshtml" />
+    <Content Include="Views\Categorias\Create.cshtml" />
+    <Content Include="Views\Categorias\Delete.cshtml" />
+    <Content Include="Views\Categorias\Details.cshtml" />
+    <Content Include="Views\Categorias\Edit.cshtml" />
+    <Content Include="Views\Categorias\Index.cshtml" />
+    <Content Include="Views\Home\Visualizar.cshtml" />
+    <Content Include="Views\Home\Modal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -275,6 +323,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201708031559167_Inicial.resx">
+      <DependentUpon>201708031559167_Inicial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
